@@ -199,6 +199,7 @@
 				<li><input type="checkbox" id="show_carousel_descriptions"><label for="show_carousel_descriptions" id="store_carousel_descriptions_text">Show app descriptions on storefront carousel</label><a href="http://enhancedsteam.com/featuredetail.php?id=26" class="help"></a></li>
 				<li><input type="checkbox" id="show_early_access"><label for="show_early_access" id="show_early_access_text">Show Early Access image banners</label>
 				<li><input type="checkbox" id="show_alternative_linux_icon"><label for="show_alternative_linux_icon" id="show_alternative_linux_icon_text">Show alternative Linux icon</label>
+				<li><input type="checkbox" id="show_itad_button"><label for="show_itad_button" id="show_itad_button_text">Show menu option to sync data to IsThereAnyDeal.com</label>
 				</ul>
 			</div>
 
